--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "firebase": "^10.11.0",
+    "flowbite": "^2.3.0",
     "handlebars": "^4.7.8",
     "lucide-static": "^0.364.0",
     "route-parser": "^0.0.5"
